@@ -503,10 +503,11 @@ MAYDAYPAGE;
 				$htmlPart .= '<p><strong>Additional Data:</strong><br />' . strval($additional) . '</p>';
 		}
 
-		$textPart .= 'BE_USER: '.(is_object($GLOBALS['BE_USER']) ? $GLOBALS['BE_USER']->user['uid'] : '0')."\n";
-		$htmlPart .= '<p><strong>BE_USER:</strong> '.(is_object($GLOBALS['BE_USER']) ? $GLOBALS['BE_USER']->user['uid'] : '0').'</p>';
-		$textPart .= 'FE_USER: '.(intval($GLOBALS['TSFE']->fe_user->user['uid']) ? $GLOBALS['TSFE']->fe_user->user['uid'] : '0')."\n";
-		$htmlPart .= '<p><strong>FE_USER:</strong> '.intval($GLOBALS['TSFE']->fe_user->user['uid']).'</p>';
+		tx_rnbase::load('tx_rnbase_util_TYPO3');
+		$textPart .= 'BE_USER: '.tx_rnbase_util_TYPO3::getBEUserUID()."\n";
+		$htmlPart .= '<p><strong>BE_USER:</strong> '.tx_rnbase_util_TYPO3::getBEUserUID().'</p>';
+		$textPart .= 'FE_USER: '.tx_rnbase_util_TYPO3::getFEUserUID()."\n";
+		$htmlPart .= '<p><strong>FE_USER:</strong> '.tx_rnbase_util_TYPO3::getFEUserUID().'</p>';
 
 		$mail = t3lib_div::makeInstance('t3lib_htmlmail');
 		$mail->start();
